[package]
name = "energy-monitor"
description = "A tool to measure, display and store electrical consumption metrics."
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
chrono = { version = "0.4.23", features = ["serde"] }
tokio = { version = "1.25", features = ["full"] }

clap = { version = "4.1.1", features = ["cargo"] }
config = { version = "0.13.3", features = ["yaml"], default-features = false }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
rumqttc = "0.22.0"
serde_json = "1.0"
lazy_static = "1.4.0"

embedded-graphics = "0.7.1"
rppal = "0.14.1"

[dev-dependencies]
image = { version = "0.24.6", default-features = false, features = ["png"] }
tokio-stream = "0.1.14"
async-stream = "0.3.5"
futures = "0.3.28"
regex = "1.9.1"

[package.metadata.cross.build]
default-target = "arm-unknown-linux-gnueabi"
